--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
-    background: rgb(136, 136, 232);
-    color: #ebe4e4;
-    text-shadow: 3px 3px 0 #000;
+    background: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif; 
 }
+
+h1 {
+    color: rgb(144, 78, 48);
+    text-shadow: 1px 1px #2a2a2a;
+}
+
+
+table, th, td {
+    border:1px solid black;
+    text-align: justify;
+  }
