--- a/style.css
+++ b/style.css
@@ -1,15 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: antiquewhite;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: "Slabo 27px", sans-serif;
+    padding: 10%;  
 }
 
 h1 {
     color: rgb(144, 78, 48);
     text-shadow: 1px 1px #2a2a2a;
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
+    text-decoration: underline;
 }
 
+div.box {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+nav {
+    display: inline;
+}
+
+ul {
+    margin: 20px 10px;
+    font-size: 16px;
+    list-style-type: none;
+    line-height: 2;
+    text-align: center;
+}
+
+figure {
+    width: 20%;
+    font-size: 10px;
+    padding: 5%;
+}
+
+
+img#cat {
+   width: 100%;
+   border: 3px solid gray;
+   border-radius: 50%;
+}
+
+table {
+    display: inline-block;
+}
+
+main {
+    clear: both;
+    text-align: center;
+    margin: 0, auto;
+}
+
+h2, h3 {
+    margin: 10px, auto;
+    background-color: #cca0a0;
+}
+
+footer {
+    text-align: center;
+    margin: 10px, auto;
+  }
+
+table {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 table, th, td {
     border:1px solid black;
     text-align: justify;
+    padding: 5px;
   }
+
+  a {
+    color: #2a2a2a;
+  }
+
+  a:visited {
+    color: rgb(80, 19, 19);
+  }
+
+  a:hover {
+    background-color: #cda7a7;
+  }
+
+legend {
+    text-align: center;
+}
+
+  form p {
+        display: flex;
+        justify-content: space-between;
+        width: 60%;
+        margin: 0.5rem;     
+  }
+
+  fieldset {
+    display: inline-block;
+    width: 60%;
+  }
+
+
+
+  
+  
+
+  
+
